# nixos-update-reminder

./: .dprint.json  README.md  module.nix  nixos_update_reminder.py  package.nix  pyproject.toml
.github/workflows/: format.yml  nix.yml  nixfmt.yml  nixos-options-doc.yml  python.yml  types.yml  unittest.yml
doc/: default.nix  example-hosts.nix  example.nix  index.adoc  options.nix
example/: config.toml
tests/: test_nixos_update_reminder.py
